# JsonDiff

./: .gitignore  .gitlab-ci.yml  Cargo.toml  README.md
src/: edit_distance.rs  html_generator.rs  json_diff.rs  lib.rs  main.rs  test.json
web/: index.html  index.js
web_output/: index.css  jsondiff.d.ts  jsondiff.js  jsondiff_bg.wasm  jsondiff_bg.wasm.d.ts  package.json
