[package]
name = "jsondiff"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
serde_json = "1.0"
wasm-bindgen = "0.2"
web-sys = { version="0.3.53", features=[ "console" ] }
